# terra-hawk-core

./: .gitignore  README.md  config.py  data_models.py  export.py  install.sh  main.py  mqtt_client.py  pyproject.toml  start.sh  systems.json  systems.py  video.py
.github/workflows/: ci.yml
mediamtx/: mediamtx.yml
tests/: conftest.py
tests/integration/: test_routes.py
tests/unit/: test_services.py
yolov8n_ncnn_model/: metadata.yaml
