[project]
name = "terra-hawk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiortc>=1.14.0",
    "fastapi>=0.136.0",
    "ncnn>=1.0.20260114",
    "opencv-python>=4.13.0.92",
    "paho-mqtt>=2.1.0",
    "pnnx>=20260409",
    "python-dotenv>=1.2.2",
    "rfdetr>=1.6.5",
    "supervision>=0.27.0.post2",
    "ultralytics>=8.4.39",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]  
